Updates for feb's tasks.

--- a/task/task.org
+++ b/task/task.org
@@ -21,7 +21,7 @@
 # SpiceCore: 59919
 # StaffMeetings: 53145
 # UACC: 60035
-# WJA_AS: 60327
+# WJA_AS: 60328
 # WJA_DV: 60327
 # ePIP: 59333          
 # CCOM: 60394
@@ -342,7 +342,7 @@
 **** VACATION
 *** 25 
 **** ePIP 
-***** 1 hour billable.  Created summaries of security scan report.  Sent to summary to Even.  Sent another to teh,aew and af.
+***** 1 hour billable.  Created summaries of security scan report.  Sent to summary to Eve.  Sent another to teh,aew and af.
 **** OCM
 ***** 5 hours billable.  Changes to recent police activity report (removed sentence) and add fields (full name, dob, student id and date the letter was created).  Continued work on hearing decision templates. 
 *** 26
@@ -1040,13 +1040,12 @@
 *** 10
 **** WEEKEND
 *** 11
+**** NCEMRR
+***** 2 hour billable.  Had cnames renamed.  Had databases users created.  Changed references to MEDHOME/MEDHOME2 to NCEMRR.
 **** Housing
-***** 2 hour billable.  
+***** 2 hour billable.  Updated upperclassman application and temp elg. code generation.
 **** ResLife
 ***** .25 hour non-billable.  Removed duplicate adjectives in RL_WILD_ADJECTIVES.
-**** NCEMRR
-***** 2 hour non-billable.  Had cnames renamed.  Had databases users created.  Changed references to MEDHOME/MEDHOME2 to NCEMRR.
-
 *** 12
 **** StaffMeetings
 ***** .75 hours non-billable.  Weekly Programming Group meeting.
@@ -1055,9 +1054,7 @@
 **** OCM
 ***** 1.5 hour billable.  HDW updates.
 ***** 1 hour non-billable.  Corrections for term semester.  Created new OCM settings field 'current semester code'.
-      
 **** OCM
-
 *** 13 
 **** Housing
 ***** 8 hours non-billable.  Fixed/corrected issue with temporary eligibility code.
@@ -1071,8 +1068,7 @@
 **** HealthyUNH
 ***** .75 hour billable.  Deployed HealtyUNH to live Site!
 **** OCM
-***** 4 hours billablle.  Worked on adding features described in 02/12/2013 email.
-
+***** 4 hours billable.  Worked on adding features described in 02/12/2013 email.
 *** 16
 **** WEEKEND
 *** 17
@@ -1090,12 +1086,14 @@
 **** OCM
 ***** .75 hour non-billable.  Imported missing v-form review columns.
 ***** 2 hours non-billable.  Finished rough-draft of OCM Summer 2013 RFC.
-***** 2 hours billablle.  Worked on adding features described in 02/12/2013 email.      
+***** 2 hours billable.  Worked on adding features described in 02/12/2013 email.      
 *** 20
 **** ResLife 
-***** .5 Corrected issue with how score are calculated.
+***** .5 hour non-billable. Corrected issue with how score are calculated.
+***** OCM
 ***** 3 hour non-billable.  Corrected issues.  Added/removed columns.
 *** 21 
+**** OCM
 ***** 3 hour non-billable.  Added additional import scripts to pull missing data.  Added generation of priv/privgroup for docs from db.
 *** 22
 **** RCC
@@ -1108,27 +1106,27 @@
 **** WEEKEND
 *** 25
 **** OCM 
-***** 3 hour non-billable.  Additional testing of HDW.
+***** 3 hour non-billable.  Additional testing of HDW.  Minor corrections to HDW.
 *** 26
 **** CCOM
-***** 1 hour non-billable.  Setting working on setting up drupal.
+***** 1 hour non-billable.  Started setting up test drupal test.
 **** OCM
-***** 1 hour non-billable - testing.
-**** Events 
-***** .5 hour non-billable.  Receibed ems support email.  Tested Events in IE to help determine cause of issue the user is reporting.
+***** 1 hour non-billable.  Testing HDW.
+**** EMS 
+***** .5 hour non-billable.  Received ems support email.  Tested Events in IE to help determine cause of issue the user is reporting.
 *** 27
 **** OCM
-***** 2 hour non-billable.  Corrections/updates to OCM.
+***** 1 hour non-billable.  Corrections/updates to OCM.
 **** CCOM
 ***** 3 hours non-billable.  Worked on setting up Drupal.  Encountered php errors when using MySQL has a db backend.
-**** Events
+**** EMS
 ***** .5 hours non-billable.  Responded to email support request.
 *** 28
 **** Housing
 ***** .5 hours non-billable.  Fixed bugs with In-hall sign-up application.
 **** NHIHPP
-***** 4 hour billable.  Worked on creating script to import user connection and system information.
-***** .5 hour non-billablle.  Updated nshred to use additional options.
+***** 4.5 hour billable.  Worked on creating script to import user connection and system information.
+***** .5 hour non-billable.  Updated nshred to use additional options.
 ** March
 *** 01
 **** OCM
@@ -1136,11 +1134,9 @@
 **** NCEMRR
 ***** meeting 1 hour.
 ****  EOS
-
 **** RCC
 ***** .25 hour non-billable.  Meeting with PFM.
 *** 02
 **** WEEKEND
 *** 03
 **** WEEKEND
-     
