--- a/task/task.org
+++ b/task/task.org
@@ -1163,3 +1163,16 @@
 
 **** HealthyUNH
 ***** .25 hour non-billable.  Re-imported fitness data.
+      
+*** 06
+**** NCEMRR
+***** 1 hours non-billable. quote.
+      
+**** HealthyUNH
+***** 3 hours billable.
+      
+*** 07
+**** NCEMRR
+***** 3 hours non-billable.  Quote.
+
+
