--- a/task/task.org
+++ b/task/task.org
@@ -4,7 +4,9 @@
 # EOS: 52188
 # HCGS: 60049
 # HealthWRQS: 60140
-# HealthyUNH: 60059
+# HealthyUNH_FitnessMap: 60059
+# HealthyUNH_WalkingMap
+60428
 # Housing: 59032
 # NCEMRR: 60338
 # MedHome: 60036
@@ -387,14 +389,14 @@
 ***** 2.5 hours non-billable.  Corrected errors with Recent Police Activity report crashing when filtering on 
 **** RCC
 ***** 1 hours non-billable.  Reset AD password; this was done to access maple.unh.edu account.  Reinstalled MS Office.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 2.5 hours non-billable.  Started working on Healthy Fitness map.
 *** 03
 **** ResLife
 ***** 1 hour billable.  Minor updates to Welcome page.
 **** ePIP 
 ***** 1 hour billable.  Training on ePIP upload proceedure.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 4 hours non-billable.  Finished working on Healthly Fitness map.  Using jQuery and a jQuery plug-in, jquery.imagemapster to provide a multi-platform UI.
 *** 04
 **** RCC
@@ -408,7 +410,7 @@
 ***** 1.5 hours non-billable.  Created two other mock-ups using jQuery UI tabs and accordion.  I sent Blaise an email with an update asking him to review them.
 **** OCM
 ***** 1.5 hour non-billable.  Received email from Sarah reporting loss of privileges and cell phone numbers Thursday evening.  After reviewing log and Perl code, I think the problem is related to upload.  I'm waiting on the student feed from back.  Received email from Sarah about incorrect College for student.  After checking database, the issue is incorrect/out-of-day data; emailed Blaise.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 2 hour non-billable.  Minor corrections to map based on feedback from Allan.  Sent email to Stacey and Jo with update.
 **** HOURS_OWED
 ***** 1 HOUR OWED
@@ -419,7 +421,7 @@
 *** 08
 **** Obliterase
 ***** 4 hours billable.  Meet with Tucker to discuss updates to system wipe cert.  Completed updates and sent update to Tucker.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 1.5 hour non-billable.  Meeting with Jo, Stacy, Alan and myself to discuss project.  After meeting Allan introducted me to the various NHIHPP staff.
 *** 09
 **** NHIHPP
@@ -441,7 +443,7 @@
 **** NHIHPP
 ***** 2 hour billable.  Tested/researched various system monitor reporting tools (nagios).
 *** 12
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 3 hours non-billable.  Meeting with Stacey, Jo, Allan and myself to discuss going from prototype to final application.  Wrote up quote as requested.  Sent quote to Jo, Stacy and Jennifer.
 **** Housing
 ***** 1 hour non-billable.  Update and expanded quote from yesterday.
@@ -491,7 +493,7 @@
 ***** .5 hour non-billable.  Conference call to discuss upload issue.
 **** HCGS
 ***** 1 hour non-billable.  Meeting with Feseha, Rob and myself to review/discuss project.
-**** HealthyUNH 
+**** HealthyUNH_FitnessMap 
 ***** 1 hour non-billable.  Meeting with Stancy, Sam (from Campus Planning) and myself to discuss the possibility of using a live-feed from campus planning rather than a static map.
 *** 20
 **** WEEKEND
@@ -519,7 +521,7 @@
 *** 25
 **** OCM
 ***** 1.5 hours non-billable.  Meeting with Sarah to discuss project, new work and minor bug fixes.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 1.5 hours non-billable.  Using WMS information from Sam, I created a functional openlayers demo.
 **** HCGS
 ***** 3 hours billable.  Copied and updated LOV from EPSCOR.  Created LOVs several times for address and person records.  Added additional fields to person records.  Start working on database schema for sample submission form.
@@ -568,7 +570,7 @@
 **** ResLife
 ***** 2 hour non-billable.  Corrected bug with reslife website allowing creation of multiple application.
 *** 06
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 6 hours billable.  Started working on project.  Created forms/recordsets (based on Fitness Measures) to store fitness locations and its metadata.
 *** 07
 **** OCM
@@ -578,13 +580,13 @@
 **** EMS
 ***** .5 hour billable.  Responded to emails to events-dev.
 *** 08
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 3 hours billable.  Continued working on project.
 **** OCM
 ***** 2.5 hours billable.  Created links (on conduct dashboard) and recordsets for MoveOut Dates and Alt. Sanction Programs.
 ***** .5 hours non-billable.  Tested additional LDAP access.
 *** 09
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 5.5 hours billable.  Completed working on project.  The map is loading features from database.  The map is displaying a popup for each location from databaes.  The menu is (mostly) working.
 **** EMS
 ***** .5 hour billable.  Responded to emails to events-dev.
@@ -599,14 +601,14 @@
 ***** .5 hour billable.  Responded to emails to events-dev.
 **** OCM
 ***** .5 hour non-billable.  Created new account on HSNGDB1 for Sarah to access using Crystal Reports.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 5 hour billable.  Continued working on project.
 *** 14
 **** UACC
 ***** .5 hour billable.  Minor adjustment to UACC website.
 **** EOS 
 ***** .5 hour billable.  Reviewed log to determine cause of failure to send emails to some people.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 5 hour billable.  Continued working on project.
 *** 15
 **** Housing
@@ -620,17 +622,17 @@
 *** 16
 **** Admissions
 ***** 1 hour billable.   Reviewed Admissions Online recordset which has SSN.  Spoke with Jennifer Blosser about this.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 5 hour billable.  Tested site in an iPad.  Minor adjustments to websites based on testing.
 *** 17
 **** WEEKEND
 *** 18 
 **** WEEKEND
 *** 19
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 6 hour billable.  Cleaned up import data.  Added ability to "page" through multiple feature pop-ups.  Added display of all feature pop-ups at a given location.
 *** 20
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 3.5 hour billable.  Cleaned up import data.  Added ability to "page" through multiple feature pop-ups.  Added display of all feature pop-ups at a given location.
 **** OCM
 ***** 2 hours non-billable.  Meeting with Sarah to review a few outstanding bugs and review hearing decision templates.
@@ -650,12 +652,12 @@
 *** 25
 **** WEEKEND
 *** 26
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 6 hour billable.  Cleaned up import data.  Added ability to "page" through multiple feature pop-ups.  Added display of all feature pop-ups at a given location.
 *** 27
 **** OCM
 ***** 4 hours non-billable.  Worked to debug a problem when using ckeditor within the hearing decision wizard.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 2 hour billable.  Updated locations, corrected minor bug with display of plus/minus icons.
 *** 28
 **** VACATION
@@ -717,19 +719,19 @@
 *** 9
 **** WEEKEND
 *** 10
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 2.5 hours billable.  Responded to an email from Stacy.  Researched using alternate map layers and using feature collections.
 **** HCGS
 ***** 2.5 hours billable.  Responded to an email from Feseha Abebe-Akele.  Updated LoginOrRegister page.  Added content to People pages for Kelly and Moris from hcgs.unh.edu.
 *** 11
 **** OCM
 ***** 1 hour billable.  Updated complaint violations to include additional columns.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** .5 hour non-billable.  Corrected bug in menu's display of minus/plus images when opening and closing sub-menus.
 *** 12
 **** OCM
 ***** 1 hour billable.  Deployed to the live site the Alternative Sanction Program and Move-Out Date extensions updates.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 1 hour billable.  Sent/Received emails to Campus Planning asking if it possible for them to plan an alternate base layer.  It is this point its not possible but it will be in the future.
 ***** 3 hours billable.  Continued working on using alternate map base layers.
 **** NHIHPP
@@ -739,7 +741,7 @@
 ***** 1.5 hour non-billable.   Farewell lunch for bja.
 **** RCC 
 ***** 1 hour non-billable.  Meeting with aew, bja and myself to review/discuss Bill's projects.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 2 hours billable.  Updated look/style of site based on feedback from Stacey.
 **** OCM
 ***** 1.5 hour billable.  Removed duplicate columns in Complaint Sanctions which aren't filterable.  Added additional columns.
@@ -748,7 +750,7 @@
 ***** 4 hour non-billable.  Research Office division-wide meeting.
 **** OCM
 ***** .5 hour non-billable.  Corrected bug in Conduct Dashboard after pushing updates.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** .5 hours non-billable.  Responded to an email from Stacy.
 ***** 1 hours billable.  Finished updating style.  Updated preview site and sent email to Stacey.
 *** 15
@@ -767,7 +769,7 @@
 **** Housing
 ***** 1.75 hours non-billable.  Meeting with Blaise, Allan and myself to review remaining work.
 ***** 2 hours billable.  Updated recordset to include timestamp column and user-selectable filter.  Worked to determine to if v_picked_rooms is correct.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 2 hours billable.  Updated style of feature on map.  Spent time determing the best colors to use based on customer's request.
 *** 19
 **** OCM
@@ -893,7 +895,7 @@
 ***** 2 hour non-billable.  Moved fudd up to Annette Schloss's office.  Moved hard-drives to Machine Room.  Spoke to Jenniffer about swaping phone wall-jacks.
 **** HCGS
 ***** 2.5 hours billable.  Created privileges and add added privilege checking to modules (project, source organism and sample submission).  Updated preview site.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 1 hour billable.  Worked on correcting issues reported by Jo and Stacey.
 *** 18
 **** Housing
@@ -921,7 +923,7 @@
 **** Housing
 ***** 1.5 hour billable.  Updated pl/sql functions to resolve issue with 'Babcock Residents should not get temp codes'.  Worked on resolving issues with teams being disbanded on occinfo upload and invited team members being removed from team.
 *** 24
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 4 hours billable.  Worked on implmentating changes based on meeting from 01/14/2013.
 **** Housing
 ***** 2.5 hour billable.  Updated pl/sql functions to resolve issue with 'Babcock Residents should not get temp codes'.  Worked on resolving issues with teams being disbanded on occinfo upload and invited team members being removed from team.
@@ -930,7 +932,7 @@
 ***** 1 hour billable.  Corrected recordset at Blaise's request.
 **** OCM
 ***** 1 hour billable.  Deployed updates to live site.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 1 hour billable.  Deployed updates to live site.
 *** 26
 **** WEEKEND
@@ -960,7 +962,7 @@
 ***** 1.25 hours non-billable.  Testing cloning bug reported by Sarah.
 **** RCC
 ***** .75 hour non-billable.  Worked on merging my three git repos in the housing project (OCM, ResLife, InHall Tool) into a single housing git repo.  The merge work and my commit history for all three projects was retained.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** .5 hour non-billable.  Phone call with Stacy to help her with cordinate creation.  Fixed bug with feature modifcation using Firefox.
 **** ResLife
 ***** .5 hour non-billable.  Fixed incorrect application date on return ra application.
@@ -975,7 +977,7 @@
 ***** 1 hour non-billable.  Fixed bug with cloning v-forms.  When the clone was saved, the sanctions would be disappearing from the parent.
 ***** 1 hour non-billable.  Determined cause of issue when saving HDW and fixed bug.
 ***** 1 hour non-billable.  Continued work on OCM Summer 2013 RFC.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 1.5 hours billable.  Worked merging the fitness map into Layout.
 **** WJA_AS
 ***** 1 hour non-billable.  Corrected to determine cause of failure to send forgot password email.
@@ -983,7 +985,7 @@
 *** 01
 **** ePIP
 ***** .75 hour billable.  Worked with Allan and Angela to upload ePIP data.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** .25 hour non-billable.  Fixed problem with loading data on website.
 ***** 3.5 hour billable.  Reformatted fitness-map page to match site.  Added 'x of y' to feature pop-up.
 **** OCM
@@ -1029,7 +1031,7 @@
 ***** 1 hours non-billable.  Quarterly All Staff Meeting.
 **** ePIP
 ***** .5 hour non-billable.  ePIP Meeting.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** 2.25 hours billable.  Implemented new features requested by NHIHPP.
 **** OCM
 ***** .25 hours non-billable.  Fixed bug with incorrect grouping of sanctions in HDW.
@@ -1067,7 +1069,7 @@
 ***** .5 hour non-billable.  Corrected calcuation error in column 'Rec. Score'.
 **** OCM
 *** 15
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** .75 hour billable.  Deployed HealtyUNH to live Site!
 **** OCM
 ***** 4 hours billable.  Worked on adding features described in 02/12/2013 email.
@@ -1149,22 +1151,21 @@
 ***** 1 hour billable.  Worked on user connection script.
 ***** 2 hours billable.  Worked on diskquota script.
 ***** 1 hour non-billable.  Meeting with Jo and Stacey to discuss unh walking map.
-**** HealthyUNH
+**** HealthyUNH_WalkingMap
 ***** 1 hour non-billable.  Worked on quote for Walking Map project.
 *** 05
 **** SysMon
 ***** 4 hours billable.  Updates to sysmon scripts.  Completed documentation describing the tables and their columns used.
 **** StaffMeetings
 ***** .50 hours non-billable.  Weekly Programming Group meeting.
-**** HealthyUNH
+**** HealthyUNH_FitnessMap
 ***** .25 hour non-billable.  Re-imported fitness data.
 **** EOS
 ***** .75 hour non-billable. Worked to determine if I could obtain image size information during upload.
-      
 *** 06
 **** NCEMRR
 ***** 2.25 hours non-billable. Started quote for project.  Read through the documents provided by NHIHPP.
-**** HealthyUNH
+**** HealthyUNH_WalkingMap
 ***** 3 hours billable.  Began working on project.
 **** RCC
 ***** .75 hour non-billable.  Meeting with Wendy and Pat.
@@ -1173,5 +1174,23 @@
 ***** 3 hours non-billable.  Worked on Quote for project.  Finished it, sent to Jo after review by Allan.
 **** Bugzilla
 ***** .25 hour non-billable.  Created accounts for Ashley Peters.
-**** HealthyUNH 
+**** HealthyUNH_WalkingMap 
 ***** 1.75 hour billable. Continued working on project.
+*** 08
+**** CURTAILED_OPERATIONS
+*** 09
+**** WEEKEND
+*** 10
+**** WEEKEND
+*** 11
+**** SysMon
+***** 1 hour non-billable.  Researched OpenVPN and Samba logs.
+**** HealthyUNH_WalkingMap
+***** 5 hours billable. Continued working on project.
+*** 12
+**** SysMon
+***** 2 hours non-billable.   Research OpenVPN and Samba logs in detail to determine what information is available.  Asked Tom to incrase logging level.
+**** OCM
+***** .5 hour non-billable.  Fixed bug when saving complaint form without DOB.
+**** HealthyUNH_WalkingMap
+***** 3 hours billable.  Continued working on project.  At this point the following features are done:  map, list of buildings, (un)-selecting of buildings (on both map and list) to show pop-up window with info and the admin interface is done.
