--- a/installer/bin/install
+++ b/installer/bin/install
@@ -1,8 +1,8 @@
 #!/usr/bin/env ruby
 # encoding: utf-8
 
-$LOAD_PATH.unshift(File.join(File.dirname(__FILE__), '/../lib/'))
-$LOAD_PATH.unshift(File.join(File.dirname(__FILE__)))
+$LOAD_PATH << File.expand_path('../../lib', __FILE__)
+$LOAD_PATH << File.expand_path("../../lib/docopt/lib", __FILE__)
 
 require 'installer/cli'
-Installer::CLI.execute(ARGV)
+Installer::CLI.new(__FILE__).execute
